--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -621,6 +621,9 @@ body {
     }
 }
 
+figcaption {
+    text-align: center;
+}
 /* =================== MOBILE CSS ===================== */
 
 @media only screen and (max-width: 600px) {
